k8s/ingress-class.yml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: ecom-client
  namespace: live
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: ingress.k8s.aws/alb
